--- a/Paragraf.html
+++ b/Paragraf.html
@@ -12,6 +12,9 @@
 
 <P style="background-color: gray;font-family:'courier new';font: size 20px;padding: 30px ;text-align-center">Paragraf z tłem w kolorze srebrnym, pisany czcionka Courier New w rozmiarze 20 pikseli, z marginesem wewnętrznym
 szerokości 30 pikseli i wyrównany do środka </P>
-<p style="border: 2px dashed olive ;color brown;font-family: tahoma;font-style: italic;font-weight:700;line-height:25px">PARAGRAF Z RAMKA O SZEROKOŚCI 2 PIKSELE, LINIA KRESKOWANA W KOLORZE OLIWKOWYM, PISANY CZCIONKA TAHOMA W. KOLORZE BRĄZOWYM, POCHYLONA, Z POGRUBIENIEM O WARTOSCI 700, WYSOKOSC LINII TO 25 PIKSELI, MARGINES WEWNĘTRZNY O SZEROKOSCI 10 PIKSELI, TEKST MA BYC PISANY MAŁYMI LITERAMI, ALE PRZETRANSFORMOWANY NA WIELKIE LITERY</p>
+<p style="border: 2px dashed olive ;color: brown;font-family: tahoma;font-style: italic;font-weight:700;line-height:25px;padding: 10px;">paragraf z ramką o szerokości 2 piksele, linia kreskowana w kolorze oliwkowym, pisany czcionką tahoma w kolorze brązowym, pochylona, z pogrubieniem o wartości 700, wysokość linii to 25 pikseli, margines wewnętrzny o szerokości 10 pikseli, tekst ma być pisany małymi literami, ale przetransformowany na wielkie litery
+</p>
+<p style="color: #333;font-family: Arial,Arial, Helvetica, sans-serif;font-weight: 32px;line-height: 1500px;"> To jest przykład</p>
+<p style="color #555"></p>
 </body>
 </html> 
