--- a/Paragraf.html
+++ b/Paragraf.html
@@ -10,11 +10,11 @@
 <p style="color: blueviolet; font-weight:bold ; font-size: 30px; border-bottom:5px dotted orange;">Paragraf podkreślony tylko na dole, linią kropkowaną o szerokości 5 pikseli w kolorze 
     pomarańczowym, tekst w kolorze purpurowym i pogrubiony. Czcionka o rozmiarze 30 pikseli.</p>   
 
-<P style="background-color: gray;font-family:'courier new';font: size 20px;padding: 30px ;text-align-center">Paragraf z tłem w kolorze srebrnym, pisany czcionka Courier New w rozmiarze 20 pikseli, z marginesem wewnętrznym
+<p style="background-color: gray;font-family:'courier new';font-size: 20px;padding: 30px ;text-align: center;">Paragraf z tłem w kolorze srebrnym, pisany czcionka Courier New w rozmiarze 20 pikseli, z marginesem wewnętrznym
 szerokości 30 pikseli i wyrównany do środka </P>
 <p style="border: 2px dashed olive ;color: brown;font-family: tahoma;font-style: italic;font-weight:700;line-height:25px;padding: 10px;">paragraf z ramką o szerokości 2 piksele, linia kreskowana w kolorze oliwkowym, pisany czcionką tahoma w kolorze brązowym, pochylona, z pogrubieniem o wartości 700, wysokość linii to 25 pikseli, margines wewnętrzny o szerokości 10 pikseli, tekst ma być pisany małymi literami, ale przetransformowany na wielkie litery
 </p>
 <p style="color: #333;font-family: Arial,Arial, Helvetica, sans-serif;font-weight: 32px;line-height: 1500px;"> To jest przykład</p>
-<p style="color #555"></p>
+<p style="color:#555 ;"></p>
 </body>
 </html> 
