--- a/Paragraf.html
+++ b/Paragraf.html
@@ -14,7 +14,8 @@
 szerokości 30 pikseli i wyrównany do środka </P>
 <p style="border: 2px dashed olive ;color: brown;font-family: tahoma;font-style: italic;font-weight:700;line-height:25px;padding: 10px;">paragraf z ramką o szerokości 2 piksele, linia kreskowana w kolorze oliwkowym, pisany czcionką tahoma w kolorze brązowym, pochylona, z pogrubieniem o wartości 700, wysokość linii to 25 pikseli, margines wewnętrzny o szerokości 10 pikseli, tekst ma być pisany małymi literami, ale przetransformowany na wielkie litery
 </p>
-<p style="color: #333;font-family: Arial,Arial, Helvetica, sans-serif;font-weight: 32px;line-height: 1500px;"> To jest przykład</p>
-<p style="color:#555 ;"></p>
+<p style="color: #333; font-family: Arial; font-weight: 32px; line-height: 1500px; font-weight: bolder; text-align: center;display: inline; "> To jest przykładowy tekst akapitu zastosowany stylami CSS: czcionka Arial, rozmiar czcionki 32px, kolor czcionki #333, pogrubiona, wyrównana do środka margines dolny paragrafu = 1500px.
+ </p>
+<p style="color:#555 ;font-family:'Times New Roman', Times, serif;font-size: 26px;text-align: right;letter-spacing: 0.5px;margin-bottom: 20px;"></p>
 </body>
 </html> 
