--- a/Paragraf.html
+++ b/Paragraf.html
@@ -16,6 +16,6 @@ szerokości 30 pikseli i wyrównany do środka </P>
 </p>
 <p style="color: #333; font-family: Arial; font-weight: 32px; line-height: 1500px; font-weight: bolder; text-align: center;display: inline; "> To jest przykładowy tekst akapitu zastosowany stylami CSS: czcionka Arial, rozmiar czcionki 32px, kolor czcionki #333, pogrubiona, wyrównana do środka margines dolny paragrafu = 1500px.
  </p>
-<p style="color:#555 ;font-family:'Times New Roman', Times, serif;font-size: 26px;text-align: right;letter-spacing: 0.5px;margin-bottom: 20px;"></p>
+<p style="color:#555 ;font-family:'Times New Roman', Times, serif;font-size: 26px;text-align: right;letter-spacing: 0.5px;margin-bottom: 20px;">To jest fragment tekstu wewnątrz paragrafu, ale dodatkowo jest podkreślony i napisany kursywa</p>
 </body>
 </html> 
