--- a/pierwsza_litera.html
+++ b/pierwsza_litera.html
@@ -14,9 +14,8 @@
 
         p::first-letter {
             font-family: cursive;
-             font-size: xx-large;
+            font-size: large;
         }
-
     </style>
 
 </head>
