--- a/style_tekstu.html
+++ b/style_tekstu.html
@@ -10,9 +10,10 @@
             border-left: 3px solid #3a96dd;
             color: #31d2f7;
             font-family: arial;
-            font-size: 17pt;
-            margin-left: 30px;
+            font-size: 17;
+            margin-in: 30px;
             line-height: 25pt;
+            
         
         }
         ul li::marker {
