--- a/Selektory.html
+++ b/Selektory.html
@@ -11,7 +11,7 @@ span{
 td{
     text-align: center;
 }
-td[id="TODAY"]{background: burlywood;}
+td[id="TODAY"]{background: ye;}
 div p{background-color: green;}
 body > DIV {color: red;}
 </style>
