--- a/tabela_tekst.html
+++ b/tabela_tekst.html
@@ -7,13 +7,14 @@
     <style>
         table{
             border-collapse: collapse;
-            table-layout: 50px;
+            table-layout:fixed ;
            
          
         }
         td{
            border: 3px black solid;
            padding: 3px;
+           height: 200px;
         }
     </style>
 </head>
