--- a/strona.html
+++ b/strona.html
@@ -2,30 +2,36 @@
 <html lang="en">
 
 <head>
-    <link rel="stylesheet" href="styl.css">
+   
+</head>
+
+<body>
+ <link rel="stylesheet" href="styl.css">
     <header><img src="baner1.jpg" alt="">
         <p class="paragraf-banner">Stołówka</p> <img src="baner2.jpg" alt="">
     </header>
     <section class="lewy">
         <article>
-            Zupy
-            <img src="pomidorowa.png" alt="">
+            <h3>Zupy</h3>
+            <img  class="img"class="img" style="height: 100px;" src="pomidorowa.png" alt="">
+            <img  class="img"style="height: 100px;" src="ogorkowa.png" alt="">
+            <h3>Ⅱ danie</h2>
+                <img class="img" style="height: 100px;" src="zestaw.png" alt="">
+                <img class="img" style="height: 100px;" src="nalesniki.png" alt="">
+                <img  class="img"style="height: 100px;" src="placki.png" alt="">
 
 
+                <h3> Dodatki </h3>
+                <img class="img" style="height: 100px " src="kompot.png" alt="">
 
-            Ⅱ danie
-            Dodatki
         </article>
     </section>
     <section class="prawa">
         <label>
+
         </label>
     </section>
-    <footer></footer>
-</head>
-
-<body>
-
+    <footer>Stronę wykonał xxxxxxxxx</footer>
 </body>
 
 </html>
